--- a/siscem v1.4/WebContent/index.html
+++ b/siscem v1.4/WebContent/index.html
@@ -36,7 +36,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">Sobre</a></li>
+              <li><a href="#https://www.youtube.com/watch?v=6uJf2IT2Zh8">Sobre</a></li>
               <li><a href="#contact">Contato</a></li>
               <!-- 
               <li class="dropdown">
@@ -69,7 +69,7 @@
       <div class="hero-unit">
         <h1>Sistema de Gerenciamento de Cemitério</h1>
         <p>Gerenciamento de qualidade para uma total satisfação.</p>
-        <p><a class="btn btn-primary btn-large">Leia mais... &raquo;</a></p>
+        <p><a class="btn btn-primary btn-large" href="https://www.youtube.com/watch?v=6uJf2IT2Zh8">Leia mais... &raquo;</a></p>
       </div>
 
       <!-- Example row of columns -->
@@ -77,24 +77,24 @@
         <div class="span4">
           <h2>Terrenos</h2>
           <p>Aqui você pode escolher o terreno e seu tamanho de acordo com sua vontade. </p>
-          <p><a class="btn" href="#">Detalhes &raquo;</a></p>
+          <p><a class="btn" href="https://www.youtube.com/watch?v=6uJf2IT2Zh8">Detalhes &raquo;</a></p>
         </div>
         <div class="span4">
           <h2>Clientes</h2>
           <p>Realize o cadastro dos clientes de forma prática, simples e rápida. </p>
-          <p><a class="btn" href="#">Detalhes &raquo;</a></p>
+          <p><a class="btn" href="cadastro.html">Detalhes &raquo;</a></p>
        </div>
         <div class="span4">
           <h2>Sepultamento</h2>
           <p>Possibilita a consulta às informações do sepultado de forma prática e sem dores de cabeça. </p>
-          <p><a class="btn" href="#">Detalhes &raquo;</a></p>
+          <p><a class="btn" href="https://www.youtube.com/watch?v=FzVR_fymZw4">Detalhes &raquo;</a></p>
         </div>
       </div>
 
       <hr>
 
       <footer>
-        <p>&copy; Company 2012</p>
+        <p>&copy; Company 2017</p>
       </footer>
 
     </div> <!-- /container -->
