Alguns links continuam não funcionando...

--- a/siscem v1.4/WebContent/cadastro.html
+++ b/siscem v1.4/WebContent/cadastro.html
@@ -2,16 +2,13 @@
  
 <html>
  <head>
- <title> Como criar um formulário completo em HTML </title>
- <meta name="description" content="Aprenda a criar um site completo que usa formulários em HTML">
+ <title> Cadastro de usuários </title>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> 
  </head>
 
  <body>
-  <h1> Bem vindo ao site HTML Progressivo</h1> 
-  <h2> Preencha o formulário abaixo para participar do curso de HTML & CSS completo, online e grátis</h2><br />
-
-<form action="Script_do_Formulario.php" method="post">
+  <h1> Preencha o formulário para cadastro</h1> 
+<form action="index.html" method="post">
 
 <!-- DADOS PESSOAIS-->
 <fieldset>
@@ -193,7 +190,7 @@
 </fieldset>
 <br />
 <input type="submit">
-<input type="reset" value="Limpar">
+<input type="reset" value="Limpar" href="cadastro.html">
 </form>
 
  </body>
