--- a/siscem v1.4/WebContent/index.html
+++ b/siscem v1.4/WebContent/index.html
@@ -36,7 +36,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#https://www.youtube.com/watch?v=6uJf2IT2Zh8">Sobre</a></li>
+              <li><a href="#sobre">Sobre</a></li>
               <li><a href="#contact">Contato</a></li>
               <!-- 
               <li class="dropdown">
@@ -77,7 +77,7 @@
         <div class="span4">
           <h2>Terrenos</h2>
           <p>Aqui você pode escolher o terreno e seu tamanho de acordo com sua vontade. </p>
-          <p><a class="btn" href="https://www.youtube.com/watch?v=6uJf2IT2Zh8">Detalhes &raquo;</a></p>
+          <p><a class="btn" href="https://www.youtube.com/watch?v=BQ0mxQXmLsk">Detalhes &raquo;</a></p>
         </div>
         <div class="span4">
           <h2>Clientes</h2>
